--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "active-model-adapter": "2.1.1",
     "broccoli-asset-rev": "^2.2.0",
     "ember-ajax": "0.7.1",
+    "ember-bootstrap": "0.7.1",
     "ember-cli": "2.3.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.5",
@@ -32,12 +33,14 @@
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-rails-addon": "0.7.0",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "5.3.1",
     "ember-cli-sri": "^2.0.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.3.0",
     "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.4",
     "ember-load-initializers": "^0.5.0",
+    "ember-modal-dialog": "0.8.4",
     "ember-remodal": "1.2.0",
     "ember-resolver": "^2.0.3",
     "loader.js": "^4.0.0"
