--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "ember-cli-dependency-checker": "^1.2.0",
     "ember-cli-htmlbars": "^1.0.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
+    "ember-cli-infinite-scroll": "0.4.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-qunit": "^1.2.1",
     "ember-cli-rails-addon": "0.7.0",
